Small fix
This is a small fix for my main page, I have been working all day for lay-out change but in the end, it did not look that great.

--- a/css/main.css
+++ b/css/main.css
@@ -273,7 +273,7 @@ input[type="submit"]:focus {
 ------------------------------------------------------------ */
 @media only screen and (min-width: 1025px) {
   .header {
-    display: inline-block;
+    display: block;
     float: left;
     width: 100%;
     max-width: 380px;
@@ -1922,7 +1922,8 @@ textarea.form-control, textarea.form-control:focus {
   background: #f5f5f5;
   border: 1px solid #9e9e9e;
   display: block;
-  -webkit-backface-visibility: visible;
+  -webkit-backface-visibility: visible; /* Chrome, Safari, Opera */
+  backface-visibility: visible;         /* Standard syntax */
   transition: opacity 200ms ease;
   border-radius: 30px;
 }
